--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,14 +4,9 @@
   
   
   .HomeHeader {
-    background-color: #282c34;
-    min-height: 100vh;
+    background-color: #f3f3f3;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    color: rgb(59, 16, 16);
   }
   
 
