--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -58,10 +58,10 @@
       color: rgb(10, 10, 10);
       height: 560px;
       width: 100%;
+      margin-bottom: 35px;
         &__conteudo {
           max-width: 523px;
           text-align: initial;
-          padding: 140px;
         }
         &__details {
           font-family: Barlow;
@@ -104,7 +104,80 @@
           width: 148px;
           border-style: solid;
         }
+
+        &__products{
+          max-width: 523px;
+          text-align: initial;
+
+        }
+
+        .product-left {
+          background-color: white;
+        }
     }
+
+    .tipbar {
+      display: flex;
+      justify-content: space-evenly;
+      margin-bottom: 35px;
+    }
+
+    .soluctions {
+
+      h1 {
+        margin-bottom: 40px;
+        text-align: left;
+
+      }
+
+      &__products {
+        display: flex;
+        justify-content: space-evenly;
+      }
+
+      &__product-one {
+        height: 381px;
+        width: 241px;
+        left: 0px;
+        top: 0px;
+        border-radius: 4px;
+      }
+
+      &__product-two {
+        height: 381px;
+        width: 241px;
+        left: 0px;
+        top: 0px;
+        border-radius: 4px;
+      }
+
+      &__product-three {
+        height: 381px;
+        width: 241px;
+        left: 0px;
+        top: 0px;
+        border-radius: 4px;
+      }
+
+      &__product-four {
+        height: 381px;
+        width: 241px;
+        left: 0px;
+        top: 0px;
+        border-radius: 4px;
+      }
+    }
+
+
+
+
+
+
+
+
+
+
+
 
 }
   
