--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -3,6 +3,7 @@
   width: 100%;
 
     &__HomeHeader {
+      position: fixed;
       width: 100%;
       background-color: #f3f3f3;
       display: flex;
@@ -166,6 +167,75 @@
         top: 0px;
         border-radius: 4px;
       }
+    }
+
+    .quemSomos {
+      width: 100%;
+      display: flex;
+
+      &__textContent{
+        width: 50%;
+      }
+
+      &__title {
+        width: 241px;
+        height: 80px;
+        font-family: Barlow;
+        font-weight: bold;
+        font-size: 32px;
+        line-height: 40px;
+        text-transform: uppercase;
+        color: #000000;
+      }
+
+      &__text {
+        position: static;
+        width: 241px;
+        height: 292px;
+        top: 104px;
+        font-family: Barlow;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        color: #000000;
+
+      }
+      &__imagem {
+        width: 50%;
+      }
+
+    }
+
+    .informationsContent {
+      width: 100%;
+      height: 480px;
+      background: #EE0E7D;
+
+        &__text {
+          text-align: center;
+        }
+
+    }
+
+    .newsletterContent {
+      width: 100%;
+      height: 436px;
+      background: #000000;
+        &__text {
+          font-family: Barlow;
+          font-weight: bold;
+          font-size: 32px;
+          line-height: 40px;
+          text-align: center;
+          text-transform: uppercase;
+          color: #FFFFFF;
+        }
+    }
+
+    .footerContent {
+      width: 100%;
+      height: 80px;
+      background: #000000;
     }
 
 
