--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -11,6 +11,7 @@
       color: rgb(0, 0, 0);
         &__logoHeader {
           max-width: 30%;
+          cursor: pointer;
           img {
             margin: 20px;
           }
@@ -21,6 +22,7 @@
           width: 30%;
           align-items: center;
           justify-content: space-around;
+          cursor: pointer;
         }
 
         &__search-header {
@@ -44,6 +46,7 @@
           width: 30%;
           align-items: center;
           justify-content: space-evenly;
+          cursor: pointer;
             img {
                 width: 22px;
                 height: 15px;
@@ -60,9 +63,11 @@
       height: 560px;
       width: 100%;
       margin-bottom: 35px;
+      display: flex;
         &__conteudo {
-          max-width: 523px;
-          text-align: initial;
+          width: 50%;
+          text-align: unset;
+          margin-top: 150px;
         }
         &__details {
           font-family: Barlow;
@@ -72,6 +77,7 @@
           font-size: 64px;
           line-height: 77px;
           text-transform: uppercase;
+          margin-right: 40px;
 
         }
 
@@ -107,13 +113,20 @@
         }
 
         &__products{
-          max-width: 523px;
+          width: 50%;
           text-align: initial;
 
         }
 
         .product-left {
           background-color: white;
+          width: 209px;
+          height: 271px;
+          text-align: center;
+          margin-top: 150px;
+          img {
+            padding: 30px 5px 39px 0px;
+          }
         }
     }
 
