--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,14 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+body {
+  overflow-x: hidden;
+}
 .HomePage {
   text-align: center;
   width: 100%;
 
     &__HomeHeader {
       position: fixed;
+      min-height: 80px;
+      text-align: center;
+      top: 0;
       width: 100%;
+      left: 0px;
+      height: 80px;
+      max-height: 20px;
       background-color: #f3f3f3;
       display: flex;
       justify-content: space-between;
-      color: rgb(0, 0, 0);
+      color: black;
         &__logoHeader {
           max-width: 30%;
           cursor: pointer;
@@ -58,93 +69,48 @@
     }
 
     &__banner {
-      background: #03FFA5;
-      color: rgb(10, 10, 10);
-      height: 560px;
+      padding: 0;
+      text-align: center;
+      margin-top: 90px;
       width: 100%;
-      margin-bottom: 35px;
-      display: flex;
-        &__conteudo {
-          width: 50%;
-          text-align: unset;
-          margin-top: 150px;
-        }
-        &__details {
-          font-family: Barlow;
-          font-style: normal;
-          font-weight: 500;
-          color: #FFFFFF;
-          font-size: 64px;
-          line-height: 77px;
-          text-transform: uppercase;
-          margin-right: 40px;
-
+      height: 755px;
+      margin-bottom: 20px;
+        img{
+          width: 100%;
         }
 
-        &__text{
-          font-family: Barlow;
-          font-style: normal;
-          font-weight: 500;
-          font-size: 64px;
-          line-height: 77px;
-          text-transform: uppercase;
-          color: #000000;
-          width: 451px;
-          height: 231px;
-        }
-
-        &__text-dois {
-          width: 329px;
-          height: 72px;
-          font-family: Barlow;
-          font-style: normal;
-          font-weight: 500;
-          font-size: 16px;
-          line-height: 24px;
-          color: #000000;
-
-        }
-
-        &__button {
-          border-radius: 20px;
-          border-color: black;
-          width: 148px;
-          border-style: solid;
-        }
-
-        &__products{
-          width: 50%;
-          text-align: initial;
-
-        }
-
-        .product-left {
-          background-color: white;
-          width: 209px;
-          height: 271px;
-          text-align: center;
-          margin-top: 150px;
-          img {
-            padding: 30px 5px 39px 0px;
-          }
-        }
     }
 
     .tipbar {
       display: flex;
       justify-content: space-evenly;
-      margin-bottom: 35px;
+      margin-bottom: 7.2rem;
     }
 
     .soluctions {
+      margin: 10px 176px;
 
       h1 {
-        margin-bottom: 40px;
+        margin-bottom: 81px;
         text-align: left;
+        font-family: Barlow;
+        font-weight: bold;
+        font-size: 32px;
+        line-height: 40px;
+        width: 395px;
+        text-transform: uppercase;
 
       }
 
-      &__products {
+      &__details {
+        font-family: Barlow;
+        font-weight: bold;
+        font-size: 32px;
+        color:#03FFA5;
+        line-height: 40px;
+      }
+
+      &__productsList {
         display: flex;
         justify-content: space-evenly;
       }
@@ -155,6 +121,9 @@
         left: 0px;
         top: 0px;
         border-radius: 4px;
+        background: #FFFFFF;
+        border: 1px solid #F2F2F2;
+        box-sizing: border-box;
       }
 
       &__product-two {
@@ -163,6 +132,9 @@
         left: 0px;
         top: 0px;
         border-radius: 4px;
+        background: #FFFFFF;
+        border: 1px solid #F2F2F2;
+        box-sizing: border-box;
       }
 
       &__product-three {
@@ -171,6 +143,9 @@
         left: 0px;
         top: 0px;
         border-radius: 4px;
+        background: #FFFFFF;
+        border: 1px solid #F2F2F2;
+        box-sizing: border-box;
       }
 
       &__product-four {
@@ -179,19 +154,86 @@
         left: 0px;
         top: 0px;
         border-radius: 4px;
+        background: #FFFFFF;
+        border: 1px solid #F2F2F2;
+        box-sizing: border-box;
+      }
+
+      &__productTitle {
+        font-family: Barlow;
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 38px;
+        text-transform: uppercase;
+        margin-bottom: 60px;
+        text-align: start;
+        margin-left: 15px;
+      }
+
+      &__productName {
+        font-family: Barlow;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 24px;
+        color: #000000;
+        margin-bottom: 20px;
+        text-align: start;
+
+      }
+
+      &__productDescription {
+        font-family: Barlow;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 18px;
+        color: #EE0E7D;
+        margin-bottom: 20px;
+        text-align: start;
+      }
+
+      &__productFeature {
+        font-family: Barlow;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 18px;
+        color: #5B5B5B;
+        margin-bottom: 2px;
+        text-align: start;
+
+
+      }
+
+      &__productButton {
+        text-align: center;
+        margin-top: 17px;
+        padding: 10px 0px 10px 0px;
+        background: #03FFA5;
+        border-radius: 6px;
+
+        color: #000000;
+        font-family: Barlow;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        cursor: pointer;
+
       }
     }
 
     .quemSomos {
       width: 100%;
       display: flex;
+      margin: 10px 176px;
 
       &__textContent{
-        width: 50%;
+        width: 27%;
+        margin-left: 100px;
       }
 
       &__title {
-        width: 241px;
+        width: 185px;
         height: 80px;
         font-family: Barlow;
         font-weight: bold;
@@ -199,6 +241,7 @@
         line-height: 40px;
         text-transform: uppercase;
         color: #000000;
+        margin-bottom: 24px;
       }
 
       &__text {
@@ -219,36 +262,34 @@
 
     }
 
-    .informationsContent {
+    .contactContent {
+      padding: 0;
+      text-align: center;
+      margin-top: 90px;
       width: 100%;
-      height: 480px;
-      background: #EE0E7D;
-
-        &__text {
-          text-align: center;
+        img{
+          width: 100%;
         }
 
     }
 
     .newsletterContent {
+      padding: 0;
+      text-align: center;
       width: 100%;
-      height: 436px;
-      background: #000000;
-        &__text {
-          font-family: Barlow;
-          font-weight: bold;
-          font-size: 32px;
-          line-height: 40px;
-          text-align: center;
-          text-transform: uppercase;
-          color: #FFFFFF;
+        img{
+          width: 100%;
         }
+
     }
 
     .footerContent {
+      padding: 0;
+      text-align: center;
       width: 100%;
-      height: 80px;
-      background: #000000;
+        img{
+          width: 100%;
+        }
     }
 
 
