--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,4 @@
-.HomeHeader {
+.header {
     position: fixed;
     min-height: 80px;
     text-align: center;
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     color: black;
-      &__logoHeader {
+      &__logo {
         max-width: 30%;
         cursor: pointer;
         img {
@@ -19,7 +19,7 @@
         }
   
       }
-      &__info-header {
+      &__informations {
         display: flex;
         width: 30%;
         align-items: center;
@@ -27,12 +27,12 @@
         cursor: pointer;
       }
 
-      &__search-header {
+      &__search-container {
         display: flex;
         width: 30%;
         align-items: center;
         justify-content: space-around;
-          &__search-input {
+          &-input {
             background: #c6ffcd;
             border: 1px solid #F2F2F2;
             box-sizing: border-box;
@@ -53,8 +53,8 @@
               width: 22px;
               height: 15px;
           }
-          &__login {
-            padding: 35px;
-          }
-      }
+        }
+        &__login {
+          padding: 35px;
+        }
   }
